barmenu: Fix gap

--- a/wp-content/themes/spruce-rock-theme/src/scss/modules/_barmenu.scss
+++ b/wp-content/themes/spruce-rock-theme/src/scss/modules/_barmenu.scss
@@ -32,7 +32,7 @@ $barmenu-breakpoint : 1080px;
         background: white;
         li.current-menu-item > a{
             border-bottom: 2px solid $color-yellow;  // la línea
-            width: fit-content;  
+            width: fit-content;
         }
         &__top{
             height: var(--barmenu-height);
@@ -67,8 +67,8 @@ $barmenu-breakpoint : 1080px;
             align-items: center;
         }
         &__sublinks{
-            display: grid;
-            grid-template-columns: 1fr 1fr;
+            display: flex;
+            gap: 40px;
             .btn-first-button{
                 white-space: nowrap;
                 background-color: $color-900;
@@ -99,7 +99,7 @@ $barmenu-breakpoint : 1080px;
                     background-size: 13px 13px;     // tamaño del SVG
                     background-position: center;
                 }
-            }            
+            }
         }
         &__mobile-button{
             display: none;
@@ -108,7 +108,7 @@ $barmenu-breakpoint : 1080px;
             }
             &.active{
                 background-color: white;
-                border: 1px solid $color-700;                
+                border: 1px solid $color-700;
                 color:$color-750;
                 &::before{
                     content: "Close";
@@ -129,7 +129,7 @@ $barmenu-breakpoint : 1080px;
         .barmenu{
             &__links,&__sublinks, .btn{
                 display: none;
-            }           
+            }
             &__top{
                 height: var(--barmenu-height);
             }
@@ -160,7 +160,7 @@ $barmenu-breakpoint : 1080px;
                     background-image: url("data:image/svg+xml;utf8,<svg width='13' height='13' viewBox='0 0 13 13' xmlns='http://www.w3.org/2000/svg'><path d='M1.34604 12.6921C0.975903 12.6921 0.659028 12.5603 0.395417 12.2967C0.131805 12.0331 0 11.7162 0 11.346C0 10.9759 0.131805 10.659 0.395417 10.3954C0.659028 10.1318 0.975903 10 1.34604 10C1.71618 10 2.03306 10.1318 2.29667 10.3954C2.56028 10.659 2.69208 10.9759 2.69208 11.346C2.69208 11.7162 2.56028 12.0331 2.29667 12.2967C2.03306 12.5603 1.71618 12.6921 1.34604 12.6921ZM6.34604 12.6921C5.9759 12.6921 5.65903 12.5603 5.39542 12.2967C5.1318 12.0331 5 11.7162 5 11.346C5 10.9759 5.1318 10.659 5.39542 10.3954C5.65903 10.1318 5.9759 10 6.34604 10C6.71618 10 7.03305 10.1318 7.29667 10.3954C7.56028 10.659 7.69208 10.9759 7.69208 11.346C7.69208 11.7162 7.56028 12.0331 7.29667 12.2967C7.03305 12.5603 6.71618 12.6921 6.34604 12.6921ZM11.346 12.6921C10.9759 12.6921 10.659 12.5603 10.3954 12.2967C10.1318 12.0331 10 11.7162 10 11.346C10 10.9759 10.1318 10.659 10.3954 10.3954C10.659 10.1318 10.9759 10 11.346 10C11.7162 10 12.0331 10.1318 12.2967 10.3954C12.5603 10.659 12.6921 10.9759 12.6921 11.346C12.6921 11.7162 12.5603 12.0331 12.2967 12.2967C12.0331 12.5603 11.7162 12.6921 11.346 12.6921ZM1.34604 7.69208C0.975903 7.69208 0.659028 7.56028 0.395417 7.29667C0.131805 7.03305 0 6.71618 0 6.34604C0 5.9759 0.131805 5.65903 0.395417 5.39542C0.659028 5.1318 0.975903 5 1.34604 5C1.71618 5 2.03306 5.1318 2.29667 5.39542C2.56028 5.65903 2.69208 5.9759 2.69208 6.34604C2.69208 6.71618 2.56028 7.03305 2.29667 7.29667C2.03306 7.56028 1.71618 7.69208 1.34604 7.69208ZM6.34604 7.69208C5.9759 7.69208 5.65903 7.56028 5.39542 7.29667C5.1318 7.03305 5 6.71618 5 6.34604C5 5.9759 5.1318 5.65903 5.39542 5.39542C5.65903 5.1318 5.9759 5 6.34604 5C6.71618 5 7.03305 5.1318 7.29667 5.39542C7.56028 5.65903 7.69208 5.9759 7.69208 6.34604C7.69208 6.71618 7.56028 7.03305 7.29667 7.29667C7.03305 7.56028 6.71618 7.69208 6.34604 7.69208ZM11.346 7.69208C10.9759 7.69208 10.659 7.56028 10.3954 7.29667C10.1318 7.03305 10 6.71618 10 6.34604C10 5.9759 10.1318 5.65903 10.3954 5.39542C10.659 5.1318 10.9759 5 11.346 5C11.7162 5 12.0331 5.1318 12.2967 5.39542C12.5603 5.65903 12.6921 5.9759 12.6921 6.34604C12.6921 6.71618 12.5603 7.03305 12.2967 7.29667C12.0331 7.56028 11.7162 7.69208 11.346 7.69208ZM1.34604 2.69208C0.975903 2.69208 0.659028 2.56028 0.395417 2.29667C0.131805 2.03306 0 1.71618 0 1.34604C0 0.975902 0.131805 0.659027 0.395417 0.395416C0.659028 0.131805 0.975903 0 1.34604 0C1.71618 0 2.03306 0.131805 2.29667 0.395416C2.56028 0.659027 2.69208 0.975902 2.69208 1.34604C2.69208 1.71618 2.56028 2.03306 2.29667 2.29667C2.03306 2.56028 1.71618 2.69208 1.34604 2.69208ZM6.34604 2.69208C5.9759 2.69208 5.65903 2.56028 5.39542 2.29667C5.1318 2.03306 5 1.71618 5 1.34604C5 0.975902 5.1318 0.659027 5.39542 0.395416C5.65903 0.131805 5.9759 0 6.34604 0C6.71618 0 7.03305 0.131805 7.29667 0.395416C7.56028 0.659027 7.69208 0.975902 7.69208 1.34604C7.69208 1.71618 7.56028 2.03306 7.29667 2.29667C7.03305 2.56028 6.71618 2.69208 6.34604 2.69208ZM11.346 2.69208C10.9759 2.69208 10.659 2.56028 10.3954 2.29667C10.1318 2.03306 10 1.71618 10 1.34604C10 0.975902 10.1318 0.659027 10.3954 0.395416C10.659 0.131805 10.9759 0 11.346 0C11.7162 0 12.0331 0.131805 12.2967 0.395416C12.5603 0.659027 12.6921 0.975902 12.6921 1.34604C12.6921 1.71618 12.5603 2.03306 12.2967 2.29667C12.0331 2.56028 11.7162 2.69208 11.346 2.69208Z' fill='%23141A33'/></svg>");
                     background-repeat: no-repeat;
                     background-size: 13px 13px;     // tamaño del SVG
-                    background-position: center;                    
+                    background-position: center;
                 }
                 &.active::after {
                     background-image: url("data:image/svg+xml;utf8,<svg width='9' height='9' viewBox='0 0 9 9' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M0.88625 8.04L0 7.15375L3.14417 4.00958L0 0.886251L0.88625 0L4.03042 3.14417L7.15375 0L8.04 0.886251L4.89583 4.00958L8.04 7.15375L7.15375 8.04L4.03042 4.89583L0.88625 8.04Z' fill='%23141A33'/></svg>");
